css/category.css
/*************
*   STYLE   *
*************/

html {
    background-color: #fff;
    font-family: sans-serif;
}
h1 {
    color: #272427;
    text-align: center;
    font-size: 5em;
    font-weight: 500;
}
h2 {
	font-size: 1.3em;
	margin: 15px;
	color: #fff;
}
a{
	text-decoration: none;
}
ul {
  list-style: none;
}
img {
	max-height: 266px
}
body {
	margin: 0;
}

input {
  font-size: 3em;
  border: none;
  border-bottom: solid 3px #272427;
  background: #fff;
  width: 80%;
  margin-bottom: 1em;
  margin-top: 0.5em;
}
input:focus {
  outline-width: 0;
  border-bottom: solid 3px #ff7f0e;
}
.search-box {
  text-align: center;
}

.sidebar {
  padding: 1em 1em;
  color: #ffffff;
  background: #272427;
  z-index: 1;  
  top: 0;
  left: 0;
  overflow-x: hidden;
  padding-top: 20px;  
}
.sidebar ul {
  margin: 0;
  margin-bottom: 1em;  
  padding: 0;
}
.sidebar-item {
  padding: 10px;
}
h3 {
  color: #fff;
  font-size: 1.5em;
  font-weight: 10;
  display:inline;
  padding-left: 1em;
}

.main {
  color: #272427;
}
p {
  text-align: center;
}
.recipe-list li {
  margin: 0 auto;
  margin-bottom: 1em;
  border-radius: 3px;
  box-shadow: 1px 4px 8px 0 rgba(0, 0, 0, 0.15);
}
.photo {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px; 
  position: relative;
}

.navbar {
  text-align: center;
}
.navbar li {
  display: inline-block;
  background-color: #737273;
  padding: 2.2px;
  width: 2vw;
  margin: 0 auto;
  margin-bottom: 1em;
  border-radius: 3px;
  box-shadow: 1px 4px 8px 0 rgba(0, 0, 0, 0.15);  
}
.navbar a{
  color: #fff;
}

.float {
  position:fixed;
  bottom: 40px;
  right: 40px;
  background: #737273;
  text-align: center;
  box-shadow: 1px 4px 8px 0 rgba(0, 0, 0, 0.15);
}
.float img {
  padding-top: 9px;
}


.Beef {
  background: #d62728;
}
.Chicken {
  background: #ffba34;
}
.Dessert {
  background: #ff7f0e;
}
.Lamb {
  background: #9467bd;
}
.Pork {
  background: #e377c2;
}
.Seafood {
  background: #17becf;
}
.Turkey {
  background: #8c564b;
}
.Veggie {
  background: #2ca02c;
}


/*************
*   LAYOUT   *
*************/

@supports (display: grid) {


  @media (min-width: 360px){

    .float {
      width: 80px;
      height: 80px;
      border-radius: 60px;
    }
    .float img{
      width: 60px;      
    }      
    .recipe-list li {
      width: 75vw;
    }
    .photo {
      width: 75vw;
    }
    .recipe-list{
      display: grid;
      grid-template-columns: 1fr;
      grid-gap: 1em;
    }


    .main{
	  margin-left: 0;
	  margin-top: 0;
	  padding: 10px 0;    	
    }
    .sidebar {
    	width: 100%;
  		height: 140px;
  		text-align: center;
  		position: static;

    }
    .sidebar li {
    	width: 10vw;
    	display: inline-block;
    }
    h3{
    	display: none;
    }
  	.icon {
  	  height: 3em;
  	  display: inline;
  	}     
  }    
  
  @media (min-width: 720px){

    .float {
      width: 80px;
      height: 80px;
      border-radius: 60px;
    }
    .float img{
      width: 60px;      
    }      
    .recipe-list li {
      width: 33vw;
    }
    .photo {
      width: 33vw;
    }
    .recipe-list{
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-gap: 1em;
    }

    .main {
      margin-left: 190px;
      margin-top: 0;
  	  padding-right: 20px;
    }
    .sidebar {
    	width: 170px;
  		height: 100%;
  		text-align: left;
	    position: fixed;
    }
   	.sidebar li {
   		width: 160px;
   	}
    h3{
    	display: inherit;
    }  
  	.icon {
  	  height: 1.5em;
  	  display: inline;
  	} 
  }  
  

  @media (min-width: 1300px){  	

    .float {
      width: 60px;
      height: 60px;
      border-radius: 40px;
    }
    .float img{
      width: 40px;      
    }
    .recipe-list li {
      width: 18vw;
    }
    .photo {
      width: 18vw;
    }
    .recipe-list {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr 1fr;
      grid-gap: 1em;
    }
  }
}

